--- a/Components/DisplaySection/DisplaySection.module.css
+++ b/Components/DisplaySection/DisplaySection.module.css
@@ -1,6 +1,7 @@
 .container{
     display:flex;
     justify-content:center;
-    align-item:center;
+    align-items:center;
     flex-wrap:wrap;
+    margin-top: 4vh;
 }
