--- a/styles/searchresults.module.css
+++ b/styles/searchresults.module.css
@@ -8,6 +8,10 @@
 }
 
 .main{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
     /* background-color:white; */
 }
 
